# thesis_plots

./: .gitignore  README.md  pyproject.toml
thesis_plots/: __init__.py  arrow_handler.py  cache.py  cli.py  icecube_diffuse_flux.py  plotter.py
thesis_plots/accretion_flare_stacking/: __init__.py  data.py  diagnostics.py  results.py
thesis_plots/accretion_flare_stacking/data/: Ns_above_100.00tev.csv  cumulative_fluxes.json  energy_range_nan.pkl  (+2 more)
thesis_plots/asassn/: __init__.py  stats.py
thesis_plots/cosmic_rays/: PlotFuncs.py  __init__.py  extract_crdb.py  sum_all_nuclei.py
thesis_plots/defense/: __init__.py  lightcurve.py
thesis_plots/dust_echos/: __init__.py  ic200530a.py  model.py
thesis_plots/flaires/: __init__.py  colors.py  diagnostics.py  distributions.py  illustrations.py  kcorrection.py  ngc7392.py  parent_sample.py  radius.py  rate.py
thesis_plots/flarestack/: __init__.py  sensitivity.py
thesis_plots/icecube/: __init__.py  diffuse.py  realtime.py  spice.py  steamshovel.py
thesis_plots/icecube_diffuse_flux/: __init__.py  measurements.json  spectrum.py
thesis_plots/instruments/: bandpasses.py
thesis_plots/neutrinos/: __init__.py  wpd_datasets.csv
thesis_plots/resimulations/: __init__.py  calibration.py  performance.py  ratio_segments.py  results.py  utils.py  visualisation.py
thesis_plots/styles/: base.mplstyle  fullpage.mplstyle  half.mplstyle  margin.mplstyle  slide.mplstyle  upright.mplstyle  wide.mplstyle
thesis_plots/ztf/: ZTF19aavnpjv.py  ZTF19adgzidh.py  ZTF23abidzvf.py  __init__.py  plotting.py  summary.py
(+39 files in other folders)
